<resources>
    <string name="app_name">DivChatAndroidApp</string>
    <string name="login_username">UserName</string>
    <string name="login_password">Password</string>
    <string name="login_submitBtn">Submit</string>
    <string name="signup_nickname">Nickname</string>
    <string name="dont_have_an_account_signup">dont have an account? Signup</string>
    <string name="already_have_an_account_login">already have an account? Login</string>
    <string name="type_a_message">Type a message</string>
    <string name="BaseUrl">http://10.0.2.2:7261/api/</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_username">Contact Username</string>
    <string name="username">Username</string>
    <string name="nickname">Nickname</string>
    <string name="server">Server</string>
</resources>