<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/username"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:id="@+id/contact_username"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/nickname"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:id="@+id/contact_nickname"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/server"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:id="@+id/contact_server"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:text="@string/login_submitBtn"
        android:textColor="@color/white"
        android:background="@color/cardview_dark_background"
        android:id="@+id/add_contact_submitBtn"/>
</LinearLayout>